Fix local auth configuration

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "FancyPlant": {
+    "fancyplant66fc2ff9": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
