--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "aws-amplify": "^3.3.24",
     "aws-amplify-react-native": "^4.3.2",
     "expo": "^40.0.1",
-    "expo-status-bar": "~1.0.3",
-    "graphql": "^15.5.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
+    "expo-status-bar": "~1.0.3",
+    "graphql": "^15.5.0",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
