--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
     "prettier/prettier": ["error"],
     "react/prefer-stateless-function": ["off"],
     "react/jsx-filename-extension": ["off"],
-    "react/forbid-prop-types": ["off"]
+    "react/forbid-prop-types": ["off"],
+    "react/destructuring-assignment": ["off"],
+    "global-require": ["off"]
   }
 }
