--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.4",
+    "@expo/webpack-config": "^0.12.61",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
@@ -18,6 +19,7 @@
     "@react-navigation/stack": "^5.14.3",
     "aws-amplify": "^3.3.24",
     "aws-amplify-react-native": "^4.3.2",
+    "classnames": "^2.2.6",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
@@ -32,7 +34,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -50,7 +53,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.3"
   },
   "private": true,
   "husky": {
