--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@reduxjs/toolkit": "^1.5.0",
     "amazon-cognito-identity-js": "^4.6.0",
     "aws-amplify": "^3.3.25",
     "aws-amplify-react-native": "^4.3.2",
@@ -32,18 +33,22 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/eslint-parser": "^7.13.10",
     "@babel/eslint-plugin": "^7.13.10",
+    "@types/react-redux": "^7.1.16",
     "babel-jest": "~25.2.6",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
