--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-ble-plx": "^2.0.2",
+    "react-native-bluetooth-classic": "^1.60.0-rc.13",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
